Fix: some buttons incorrectly aligned in 2.8.4 (#6715)

--- a/src-ui/src/styles.scss
+++ b/src-ui/src/styles.scss
@@ -332,8 +332,7 @@ textarea,
   }
 }
 
-.input-group .form-control-sm,
-.input-group .btn-sm {
+.input-group .form-control-sm {
   // accommodate larger font size on mobile
   padding-top: .15rem;
   padding-bottom: .15rem;
